<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sp_drm"
        android:summary="@string/hint_DRM_Media"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sp_autofill"
        android:summary="@string/setting_summary_autofill" />

    <EditTextPreference
        android:defaultValue="https://codeberg.org/Gaukler_Faun/FOSS_Browser/wiki"
        android:key="favoriteURL"
        android:title="@string/setting_title_fav"
        android:icon="@drawable/icon_fav" />

    <EditTextPreference
        android:defaultValue=""
        android:key="urlForPosting"
        android:title="@string/dialog_postOnWebsite"
        android:summary="@string/dialog_postOnWebsiteHint"
        android:icon="@drawable/icon_post" />

    <Preference android:summary="@string/dialog_postOnWebsiteHint" />

    <de.baumann.browser.preferences.EditTextSwitchPreference
        android:key="sp_userAgent"
        android:selectable="true"
        android:title="@string/setting_title_userAgent"
        app:editTextSwitchKey="userAgentSwitch"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory
        android:title="@string/setting_title_search_engine"
        android:icon="@drawable/icon_search">

        <Preference android:summary="@string/custom_searches_summary" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/setting_entries_search_engine"
            android:entryValues="@array/setting_values_search_engine"
            android:key="sp_search_engine"
            android:title="@string/setting_title_search_engine" />

        <de.baumann.browser.preferences.EditTextSwitchPreference
            android:key="sp_search_engine_custom"
            android:selectable="true"
            android:title="@string/setting_title_searchEngine"
            app:editTextSwitchKey="searchEngineSwitch"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_userScript"
        android:icon="@drawable/icon_java">

        <de.baumann.browser.preferences.EditTextSwitchPreference
            android:key="sp_onPageStarted"
            android:selectable="true"
            android:title="onPageStarted"
            app:editTextSwitchKey="onPageStarted"
            app:useSimpleSummaryProvider="true" />

        <de.baumann.browser.preferences.EditTextSwitchPreference
            android:key="sp_onPageFinished"
            android:selectable="true"
            android:title="onPageFinished"
            app:editTextSwitchKey="onPageFinished"
            app:useSimpleSummaryProvider="true" />

        <de.baumann.browser.preferences.EditTextSwitchPreference
            android:key="sp_onLoadResource"
            android:selectable="true"
            android:title="onLoadResource"
            app:editTextSwitchKey="onLoadResource"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>